# ijepa-mini

./: .gitignore  README.md  main.py  pyproject.toml
configs/: default.yaml  imagenet50_200_vit_small_original_mask_jepa.yaml  imagenet50_200_vitb16_random_jepa.yaml
scripts/: compare_imagenet50_linear_probe.py  prepare_imagenet50_subset.py
src/: __init__.py
src/data/: __init__.py  dataset.py  download_data.py
src/evaluation/: __init__.py  knnn.py  linear_probe.py
src/masks/: __init__.py  block_mask.py
src/models/: __init__.py  encoder.py  ijepa.py  predictor.py
src/training/: __init__.py  ema.py  losses.py  train.py
tests/: conftest.py  test_devices.py  test_ema.py  test_encoder.py  test_ijepa_training.py  test_imagenet50_protocol.py  test_masks.py
